<resources>
    <string name="addDevice_text">Add a personal\ninhaler</string>
    <string name="addDeviceInstructionHoldInhaler_index_text">1.</string>
    <string name="addDeviceInstructionHoldInhaler_text">Hold the inhaler behind your mobile\ndevice, so you see the inhaler\'s QR\ncode on the mobile device screen.</string>
    <string name="addDeviceInstructionAlignInhaler_index_text">2.</string>
    <string name="addDeviceInstructionAlignInhaler_text">Align the inhaler\'s QR code with the yellow square on the screen.</string>
    <string name="addDeviceInstructionQRCodeInhaler_text">QR Code</string>
    <string name="addDeviceScanInhalerHoldInhaler_index_text">1.</string>
    <string name="addDeviceScanInhalerHoldInhaler_text">Hold the inhaler behind your mobile\ndevice, so you see the inhaler\'s QR\ncode on the mobile device screen.</string>
    <string name="addDeviceScanInhalerAlignInhaler_index_text">2.</string>
    <string name="addDeviceScanInhalerAlignInhaler_text">Align the inhaler\'s QR code with the\nyellow square on the screen.</string>
    <string name="addDeviceDeviceExists_text">This inhaler is already\nregistered</string>
    <string name="addDeviceInstructionTitle_text">Scanning Instructions</string>
    <string name="addDeviceScanInhalerTitle_text">Scan Inhaler</string>
    <string name="deviceNameViewTitle_text">Name Your Inhaler</string>
    <string name="addDeviceCustomNicknameTitle_text">Create A New Name</string>
    <string name="addDeviceProblemScanning_text">Trouble scanning?</string>
    <string name="addDeviceScan_text">Align the QR code with the yellow square</string>
    <string name="addDeviceScanButton_text">Scan your inhaler</string>
    <string name="addDeviceScanCompleted_text">Got it!</string>
    <string name="addDeviceScanWait_text">Please wait…</string>
    <string name="editDeviceStatus_text">Status</string>
    <string name="editDeviceInhalerType_text">Inhaler Type</string>
    <string name="addDeviceId_text">Enter the ID number printed above\nthe QR code on your inhaler
    </string>
    <string name="addDeviceCode_text">Enter the authentication code exactly as\nprinted below the
        QR code on your inhaler
    </string>
    <string name="addDeviceCaseSensitive_text">Code is CASE SENSITIVE and\nincludes punctuations!</string>
    <string name="addDeviceManualEntry_text">Trouble Scanning</string>
    <string name="addDeviceInvalidSerialNumber_text"><b>Incorrect ID</b></string>
    <string name="addDeviceInvalidSerialNumberShort_text">Incorrect ID Number</string>
    <string name="addDeviceInvalidCustomNicknameInvalidCharacters_text">The name should include only letters\nand numbers</string>
    <string name="addDeviceInvalidCustomNicknameExceedsMaxLength_text">The name should be 6 characters or less</string>
    <string name="addDeviceInvalidCustomNicknameAlreadyExists_text">This name already exists</string>
    <string name="addDeviceInvalidAuthenticationCode_text"><b>Incorrect authentication code</b></string>
    <string name="addDeviceInvalidAuthenticationCodeShort_text">Incorrect Authentication Code</string>
    <string name="addDeviceIncompatibleInhaler_text">This inhaler is not compatible with this app. Contact Teva Support for more info.\n\n1-888-603-0788"</string>
    <string name="deviceListMaxInhalersLabel_text">The App supports up to 5 $TradeName$s at the same time. To add a new inhaler please remove an existing empty inhaler.</string>
    <string name="addDeviceInvalidQRCode_text">Invalid QR Code</string>
    <string name="systemErrorMaxInhalersReachedTitle_text">The App supports up to 5 $TradeName$ inhalers at the same time</string>
    <string name="systemErrorMaxInhalersReachedContent_text">To add a new personal inhaler\nplease remove an existing\nempty inhaler</string>
    <string name="emptyInhalerList_text">You don\'t have any connected inhalers.\nBegin by adding an inhaler.</string>
    <string name="consentToAccessCameraTitle_text">$AppName$ requires access to the camera</string>
    <string name="consentToAccessCameraContent_text">To scan an inhaler, allow the App to access the camera</string>
    <string name="cancel_text">Cancel</string>
    <string name="appIsExpired_text">The $AppName$ is no longer available. Please call Teva.</string>
    <string name="continue_text">Continue</string>
    <string name="date_text">Date</string>
    <string name="done_text">Done</string>
    <string name="deviceStateCheckCounter_text">Check the dose counter</string>
    <string name="deviceStateConnected_text">Connected</string>
    <string name="deviceStateDisconnected_text">Last connected $Days$ days ago</string>
    <string name="deviceStateDisconnected_one_day_text">Last connected $Days$ day ago</string>
    <string name="deviceStateOutOfRange_text">Out of range for the last 24 hours</string>
    <string name="deviceStateSearching_text">Searching…</string>
    <string name="deviceListStartTracking_text">Tracking will start once you\ntake the first dose</string>
    <string name="improveYourTechnique_text"><u>Instructions for use</u></string>
    <string name="inhaler_text">My Inhalers</string>
    <string name="name_text">Name</string>
    <string name="next_text">Next</string>
    <string name="no_text">No</string>
    <string name="ok_text">OK</string>
    <string name="settings_text">Settings</string>
    <string name="tryAgain_text">TRY AGAIN</string>
    <string name="removeDeviceConfirmation_text">Are you sure you want to\nremove your $TradeName$\n(\'"%s"\') inhaler?</string>
    <string name="removeThisDevice_text"><u>Remove</u></string>
    <string name="scanDeviceNow_text">Scan Your Inhaler</string>
    <string name="scanDeviceLater_text">Scan Your Inhaler Later</string>
    <string name="trackerWelcome_text">You don’t have any connected inhalers. Begin by adding an inhaler.</string>
    <string name="weather_text">Environment</string>
    <string name="yes_text">Yes</string>
    <string name="typeHere_text">Type here</string>
    <string name="homeInhaler_text">Home</string>
    <string name="sportsInhaler_text">Sports</string>
    <string name="travelInhaler_text">Travel</string>
    <string name="workInhaler_text">Work</string>
    <string name="otherInhaler_text">Create your own name</string>
    <string name="inhalerNameInstruction_text">Select a name for your inhaler:</string>
    <string name="menuHowToUseAppItem_text">How to Use the App</string>
    <string name="menuInstructionsForUseItem_text">Instructions for Use</string>
    <string name="menuVideoLibraryItem_text">Video Library</string>
    <string name="menuHealthcareProgram_text">Healthcare Program</string>
    <string name="menuSettingsItem_text">Notification Settings</string>
    <string name="menuAboutItem_text">About</string>
    <string name="menuConfirmWebRedirect_text">You are about to leave ProAir\nDigihaler app and directed to\nexternal Video library in\nmyproairdigihaler.com</string>
    <string name="remindersUserFeelingSetting_text">Daily Morning Self Assessment</string>
    <string name="remindersDailyEnvironmentalNotificationSetting_text">Daily Environmental Notification</string>
    <string name="remindersTitle_text">Notification Settings</string>
    <string name="menuInstructionsForUseTitle_text">Instructions for Use</string>
    <string name="menuWebLinkItem_text">ProAirDigihaler.com</string>
    <string name="menuServiceCenterItem_text">Teva Support</string>
    <string name="menuServiceCenterDescription_text">Customer Support can help you get started and answer your questions about the use of $TradeName$.</string>
    <string name="menuServiceCenterCall_text">Customer Support</string>
    <string name="menuAboutTitle_text">About</string>
    <string name="walkthroughWelcome_text">Welcome to your\npersonal ProAir\nDigihaler App</string>
    <string name="walkthroughWelcome_part2_text">This app can be used with your\nProAir Digihaler.</string>
    <string name="walkthroughMaxInhalerConnection_text">Only use this app for your personal inhaler(s).</string>
    <string name="walkthroughReadyForUse_text">Your ProAir Digihaler is always ready for immediate use.\n\nA connection to the app is not needed for you to take your medicine.</string>
    <string name="walkthroughTrackerCounterReset_text">This widget shows the number of inhalation events today.\n\nYou will receive feedback\nshortly after you inhale and close the red cap.\n\nReports are available to track your ProAir Digihaler use. Use this widget to see your reports.</string>
    <string name="walkthroughDeviceNearEmpty_text">A red widget circle will notify you to check the dose counter of your registered inhaler(s) for a possible refill.\n\nUse the widget to manage your registered inhalers.</string>
    <string name="walkthroughEnvironmentMonitor_text">Real time Air Quality, Weather\nand Pollen information is\navailable for your location.</string>
    <string name="walkthroughDailyAssessment_text">Use this icon for your Daily Self Assessment.\n\nSelect an option based on how you feel.</string>
    <string name="walkthroughTevaSupportServices_text">Customer Support is only 1 click away to answer your questions or help you get started with your ProAir Digihaler and app.</string>
    <string name="walkthroughPasswordProtection_text">We recommend setting a password on your mobile device to protect your personal information stored in the app.</string>
    <string name="walkthroughUserReport_text">Use this icon to generate your User Report.</string>
    <string name="walkthroughGetStarted_text">Let\'s get started!</string>
    <string name="walkthroughNext_text">Next</string>
    <string name="rescueTrackerWidget_text">Inhalation\nEvents</string>
    <string name="environmentWidget_text">Environment</string>
    <string name="dailyUserFeelingReminderNotificationCenter_text">Good Morning! How do you feel today?</string>
    <string name="distancePerHourUnit_text">mph</string>
    <string name="environmentWeatherCardTitle_text">Weather</string>
    <string name="environmentWeatherPrecipitation_text">Precipitation:</string>
    <string name="environmentWeatherHumidity_text">Humidity:</string>
    <string name="environmentWeatherWind_text">Wind:</string>
    <string name="blankFieldDash_text">-</string>
    <string name="inhalationsFeedbackGoodInhalation_text">Good Inhalation Detected</string>
    <string name="inhalationsFeedbackLowInhalation_text">Tip: Always breathe in as quickly and deeply as possible.</string>
    <string name="inhalationsFeedbackHighInhalation_part1_text">
        Make sure to not cover the air vent when you inhale.</string>
    <string name="inhalationsFeedbackHighInhalation_part2_text">
        Tip: Take another inhalation if you need it.
    </string>
    <string name="inhalationsFeedbackTurnOffGoodInhalationNotification_text">Turn off good inhalation notifications</string>
    <string name="consentWelcomeText_text">Welcome,</string>
    <string name="consent_dob_invalid_text">Invalid Date of Birth</string>
    <string name="consentConfirm_text">Next</string>
    <string name="dob_text">Date of Birth</string>
    <string name="consentMessage_text">You must confirm the following before\nyou start using $TradeName$</string>
    <string name="inhalation_error_feedback_text">
        Possible Air Vent Block
    </string>
    <string name="profile_selection_header_label">Who will be using the inhaler(s) connected to this device?</string>
    <string name="profile_selection_only_one_person">You can only add inhalers belonging to <b>one person</b> using this app.</string>
    <string name="dependents_first_name">Dependent\'s First Name</string>
    <string name="dependents_last_name">Dependent\'s Last Name</string>
    <string name="dependents_birth_date">Dependent\'s Birth Date</string>
    <string name="dependents_first_name_hint">First Name</string>
    <string name="dependents_last_name_hint">Last Name</string>
</resources>