<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <variable
            name="viewmodel"
            type="com.teva.respiratoryapp.activity.viewmodel.popup.NotificationPopupViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_width="328dp"
        tools:layout_height="220dp">
        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/PopupHeaderText"
            android:text="@{viewmodel.headerText}"
            android:visibility="@{viewmodel.headerVisible}"
            android:layout_marginTop="@dimen/popup_title_top_margin"
            android:layout_marginStart="@dimen/popup_horizontal_margin"
            android:layout_marginEnd="@dimen/popup_horizontal_margin"
            bind:layout_constraintTop_toTopOf="parent"
            bind:layout_constraintStart_toStartOf="parent"
            bind:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/inhalationsFeedbackGoodInhalation_text"/>

        <TextView
            android:id="@+id/body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/PopupText"
            android:text="@{viewmodel.bodyText}"
            android:visibility="@{viewmodel.bodyVisible}"
            android:layout_marginTop="@dimen/popup_body_top_margin"
            android:layout_marginStart="@dimen/popup_horizontal_margin"
            android:layout_marginEnd="@dimen/popup_horizontal_margin"
            bind:layout_constraintTop_toBottomOf="@id/title"
            bind:layout_constraintStart_toStartOf="parent"
            bind:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/inhalationsFeedbackLowInhalation_text"/>

        <CheckBox
            android:id="@+id/checkbox"
            style="@style/popup_checkbox_style"
            android:button="@drawable/popup_checkbox_selector"
            android:paddingTop="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/popup_horizontal_margin"
            android:layout_marginTop="@dimen/popup_checkbox_top_margin"
            android:checked="@={viewmodel.turnOff}"
            bind:layout_constraintStart_toStartOf="parent"
            bind:layout_constraintTop_toBottomOf="@id/body"
            android:text="@string/inhalationsFeedbackTurnOffGoodInhalationNotification_text"/>


    </android.support.constraint.ConstraintLayout>
</layout>
